# masquer

./: .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  fly.toml  pyproject.toml  requirements.txt  update.py  update.sh
.github/workflows/: docker.yaml  ruff.yaml  ruff.yml  snyk_python.yaml  test.yaml
assets/: referers.json  sec_ch_ua.json  useragents.json
docs/: deployment.md  development.md  docker.md
src/: Dockerfile  app.py  logging_config.py
src/api/: main.py  routes.py
src/assets/: header.json  useragents.json
src/masquer/: __init__.py  app.py
src/masquer/utils/: assets.py  response.py  sec_ch.py  select.py  validate.py
src/masquer_api/: main.py
src/masquerade/: __init__.py  app.py
src/masquerade/utils/: response.py  select.py  validate.py
src/utils/: assets.py  handlers.py  response.py  select.py  update.py  validate.py
tests/: test_app.py  test_assets.py  test_response.py  test_select.py  test_validate.py
tests/requests/dev/: default.posting.yaml  hd.posting.yaml  rf-hd.posting.yaml  rf.posting.yaml  ua-hd.posting.yaml  ua-rf-hd-count.posting.yaml  ua-rf-hd.posting.yaml  ua-rf.posting.yaml  ua.posting.yaml
tests/requests/prod/: default.posting.yaml  hd.posting.yaml  rf-hd.posting.yaml  rf.posting.yaml  ua-hd.posting.yaml  ua-rf-hd-count.posting.yaml  ua-rf-hd.posting.yaml  ua-rf.posting.yaml  ua.posting.yaml
