[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[project]
name = "masquer"
dynamic = ["version"]
description = "A tool to generate random user-agent and referer data for HTTP requests"
authors = [{ name = "Elliott Steer", email = "essteer@pm.me" }]
dependencies = []
requires-python = ">=3.9"
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["requests", "header data", "user-agents"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
extras = [
    "beautifulsoup4==4.12.3",
    "fastapi==0.111.0",
]

[project.urls]
documentation = "https://github.com/essteer/masquer/blob/main/README.md"
repository = "https://github.com/essteer/masquer"
issues = "https://github.com/essteer/masquer/issues"
docker = "https://hub.docker.com/r/essteer/masquer"

[tool.hatch.version]
path = "src/masquer/__about__.py"

[tool.hatch.build.targets.sdist]
include = [
    "src/masquer/**/*.py"
]
exclude = [
    "/.github",
    "*.json",
    "/tests",
    ".pre-commit-config.yaml",
    "update.py"
]

[tool.hatch.build.targets.wheel]
packages = ["src/masquer"]

[tool.uv]
dev-dependencies = [
    "hatch==1.11.1",
    "hatchling==1.24.2",
    "pre-commit==3.7.1",
    "ruff==0.4.5",
]
